# CVProjectWork

./: .gitignore  CMakeLists.txt  CppProperties.json  README.md
CVProject/: CVProject.sln  CVProject.vcxproj  CVProject.vcxproj.filters  settings.json
CVProject copia/: settings.json
CVProject copia/code/: context.h  main.cpp
CVProject/Relazione/: ProductRecognition.docx  draft.txt  sim.xlsx  similarity.csv
CVProject/Relazione/imgs/: compoundapproach.mdj  generalPipeline.mdj
CVProject/code/: ResourcePool.h  RichImage.h  context.h  costants.h  draft.cpp  main.cpp
CVProject/code/dead_code/: InfiniteMatrix.h  ResourcePool.h  costants.h  fourier.h  template.h
CVProject/code/processing/: GHTMatching.h  GHTMatching.hpp  InfiniteMatrix.h  RichImage.h  RichImage.hpp  blob.h  blob.hpp  fourier.h  ght.h  matching.h  matching.hpp  preprocessing.h  preprocessing.hpp  template.h
CVProject/code/threading/: threadpool.h
CVProject/code/utilities/: ImageView.h  Logger.h  ResourcePool.h  cli.h  dirent.h  json.hpp  tools.h  tools.hpp
CVProject/opencv3/include/opencv2/: opencv_modules.hpp
Lab_Session_1/: lab_1.cpp
Lab_session_2/: Lab_2.cpp  functions.cpp
